# samgis_core

./: .coveragerc  .dcignore  .gitattributes  README.md  pyproject.toml  pytest.ini  requirements_no_version_test.txt
samgis_core/: __init__.py  __version__.py
samgis_core/prediction_api/: sam_onnx.py  sam_onnx2.py  sam_onnx_inference.py
samgis_core/utilities/: constants.py  create_folders_and_variables_if_not_exists.py  create_folders_if_not_exists.py  fastapi_logger.py  frontend_builder.py  plot_images.py  serialize.py  session_logger.py  type_hints.py  update_requirements_txt.py  utilities.py
tests/: __init__.py  local_tiles_http_server.py
tests/events/: samexporter_predict.json
tests/events/SegmentAnythingONNX/: mask_output.npy
tests/events/samexporter_predict/colico/: colico_nextzen.json  colico_nextzen.tfw  colico_nextzen.tiff
tests/events/samexporter_predict/europe/: img.npy  inference_out.npy  mask.npy
tests/events/samexporter_predict/north_america/: img.npy  inference_out.npy  mask.npy
tests/events/samexporter_predict/oceania/: img.npy  inference_out.npy  mask.npy
tests/events/samexporter_predict/south_america/: img.npy  inference_out.npy  mask.npy
tests/events/samexporter_predict/teglio/: mask.npy
tests/prediction_api/: helper_assertions.py  test_sam_onnx.py  test_sam_onnx2.py  test_sam_onnx2_inference.py
tests/static/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
tests/static/src/: App.vue  main.ts
tests/static/src/components/: HelloWorld.vue
tests/utilities/: test_create_folders_if_not_exists.py  test_frontend_builder.py  test_plot_images.py  test_serialize.py  test_session_logger.py  test_update_requirements_txt.py  test_utilities.py
