[tool.poetry]
name = "samgis_core"
version = "3.2.0"
description = "SamGIS CORE"
authors = ["alessandro trinca tornidor <alessandro@trinca.tornidor.com>"]
license = "MIT license"
readme = "README.md"

[metadata]
name = "samgis_core"
version = "3.2.0"

[tool.poetry.urls]
Source = "https://gitlab.com/aletrn/samgis_core"

[tool.poetry.dependencies]
bson = "^0.5.10"
numpy = "^2.1.2"
pillow = "^11.0.0"
python = ">=3.10, <3.13"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"

[tool.poetry.group.onnxruntime]
optional = true

[tool.poetry.group.onnxruntime.dependencies]
onnxruntime = "^1.20.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mpld3 = "^0.5.10"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
rasterio = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
