[project]
name = "samgis_core"
version = "3.4.1"
description = "SamGIS CORE"
authors = [
    {name = "alessandro trinca tornidor", email = "alessandro@trinca.tornidor.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "bson (>=0.5.10,<0.6.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)"
]

[project.urls]
Source = "https://gitlab.com/aletrn/samgis_core"

[tool.poetry]

[tool.poetry.group.onnxruntime]
optional = true

[tool.poetry.group.onnxruntime.dependencies]
onnxruntime = "^1.21.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mpld3 = "^0.5.10"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
rasterio = "^1.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
